--- a/backend/.env.example
+++ b/backend/.env.example
@@ -12,3 +12,6 @@ OPENAI_API_KEY=your_openai_api_key_here
 
 # Groq API Configuration
 GROQ_API_KEY=your_groq_api_key_here
+
+# OCR.space API Configuration
+OCR_API_KEY=your_ocr_space_api_key_here
